--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "weather",
+  "name": "weatherappnodejs",
   "version": "1.0.0",
-  "description": "weather app",
+  "description": "creating node js project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "chandan",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "requests": "^0.3.0"
